<resources>
    <string name="app_name">Surveillance</string>
    <string name="logout">Çıkış</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_patient">Hasta Ekle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile">Kullanıcı Bilgisi</string>
    <string name="doc_profile">Doktor Bilgisi</string>
    <string name="registered_patients">Kayıtlı Hastalar</string>
    <string name="sil">sil</string>
    <string name="duzenle">düzenle</string>
    <string name="reminder">Randevu için hatırlatıcı ekle</string>
</resources>